# CarApp

./: .gitignore  README.md  settings.gradle.kts
app/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
car/: README.md  delivery_server.py
car_recognition/: README.md  face_commander.py
docs/: 开发报告.docx  开发报告.md  测试报告.docx  测试报告.md  需求文档.docx  需求文档.md
face_recognition/: README.md  demo.py  download_stranger_dataset.py  export_models.py  test_all.py  verify_faces.py  webcam_test.py
face_recognition/models/: README.md  face_embed.onnx
face_recognition/output/: threshold.txt
facedata/: README.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
icar_face/: README.md  delivery-bridge.service  package.xml  setup.cfg  setup.py
icar_face/config/: classrooms.yaml
icar_face/icar_face/: __init__.py  delivery_controller.py  delivery_status.py  face_bridge.py  face_detector.py  face_recognizer.py  face_server.py  lidar_guard.py  protocol.py  visual_detector.py  voice_broadcaster.py
icar_face/launch/: delivery.launch.py  icar_face.launch.py
icar_face/models/: enrolled_embeddings.npz
icar_face/scripts/: camera_stream_server.py  copy_models.sh  deploy_face.sh  mark_waypoints.py
scripts/: README.md  cam.py  fix_capture_frame.py
web-admin/: README.md  package-lock.json  package.json
web-admin/public/: app.js  index.html  styles.css
web-admin/server/: carEncoder.js  db.js  index.js  tcpPush.js
yolo_training/: README.md  split_dataset.py  train.bat  voc_traffic.yaml
yolo_training/TRAFFIC/: README.txt  classes.txt
(+23 files in other folders)
